--- a/.github/workflows/stg_nodeexpressapitest(stg).yml
+++ b/.github/workflows/stg_nodeexpressapitest(stg).yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'stg'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5DFE2FE6DD124359BEFE53E85AEF9FE9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8761D97F0FD84EF39475E97B842ED1F0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A6EF1658EE084DB7BAACF8B85A3DE62F }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -68,4 +59,4 @@ jobs:
           app-name: 'nodeexpressapitest'
           slot-name: 'stg'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5A22749FF1164DD6AA8C64AF6E5E67C8 }}
